// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createTemplate: CustomElement hoisting its styles 1`] = `
{
  "content": 
"<nested-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel_rna1bi cls_ju9u1n">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
,
  "stylesheets": [],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom & hoist styles 1`] = `
{
  "content": 
"<nested-component class="nestedComponent_37itmrf cls_1rlu8mi cls_8mez4t">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel_rna1bi cls_ju9u1n">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
,
  "stylesheets": [
    ".cls_1rlu8mi{display:flex;}",
    ".cls_8mez4t{flex-direction:column;}",
  ],
}
`;

exports[`createTemplate: CustomElement with styled slotted component 1`] = `
{
  "content": 
"<nested-component class="slottedParagraph_1onxevw cls_91m869">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel_rna1bi cls_ju9u1n">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
    <p slot="nested">slotted paragraph</p>
</nested-component>"
,
  "stylesheets": [
    ".cls_91m869{color:rebeccapurple;}",
  ],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom 1`] = `
{
  "content": 
"<top-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_1onxevw cls_91m869">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel_rna1bi cls_ju9u1n">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
,
  "stylesheets": [],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles 1`] = `
{
  "content": 
"<top-component class="topComponent_15q3aso cls_131mv1i">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_1onxevw cls_91m869">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel_rna1bi cls_ju9u1n">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
,
  "stylesheets": [
    ".cls_131mv1i{display:block;}",
  ],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles and child 1`] = `
{
  "content": 
"<top-component class="topComponent_15q3aso cls_131mv1i">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .cls_91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_1onxevw cls_91m869">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .cls_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel_rna1bi cls_ju9u1n">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
    <img class="image_a9ujt0 cls_mygp1 cls_x8x9vx" />
</top-component>"
,
  "stylesheets": [
    ".cls_131mv1i{display:block;}",
    ".cls_mygp1{width:100%;}",
    ".cls_x8x9vx{aspect-ratio:16 / 9;}",
  ],
}
`;
